@@ -1,3 +1,8 @@
+2004-12-01  Michael Yount <csf@moscow.com>
+
+	* lib/Majordomo.pm:  (_subscribe)  Log a "register" event
+	if the subscription causes the subscriber to be registered.
+
 2004-11-22  Michael Yount <csf@moscow.com>
 
 	* lib/Mj/Config.pm:  (compile_pattern)  Change the 'ALL'
